# forest-carbon-management

./: README.md  pyproject.toml
geometries/: guatemala_project_area.geojson
geometries/WDPA_WDOECM_Nov2024_Public_26621_shp/: WDPA_WDOECM_Nov2024_Public_26621_shp-polygons.dbf  WDPA_WDOECM_Nov2024_Public_26621_shp-polygons.shp  WDPA_WDOECM_Nov2024_Public_26621_shp-polygons.shx
geometries/limites_integradores_wgs84_v1_2_0/: ma_limite_consensual_muylaert_et_al_2018_wgs84.dbf  ma_limite_consensual_muylaert_et_al_2018_wgs84.shp  ma_limite_consensual_muylaert_et_al_2018_wgs84.shx
notebooks/: allometric_equations.Rmd  course2_module1.ipynb
notebooks/carbon_accounting/: atlantic_forest_eda.ipynb
notebooks/carbon_data/: course2_module2.ipynb  mayan_biosphere_deforestation.ipynb  mayan_biosphere_lulc.ipynb
utils/: mapping.py
