[tool.poetry]
name = "forest-carbon-management"
version = "0.1.0"
description = "Environment for Forest Carbon Management certificate"
authors = ["Ilse Paniagua <ilsep@umich.edu>"]
package-mode= false

[tool.poetry.dependencies]
python = "^3.12"
geemap = "^0.35.1"
ipykernel = "^6.29.5"
xarray = "^2024.10.0"
earthengine-api = "^1.2.0"
pyproj = "^3.7.0"
geopandas = "^1.0.1"
setuptools = "^75.3.0"
mss = "^9.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
